--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "axios": "^0.27.2",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
+    "fs": "^0.0.1-security",
+    "qs": "^6.11.0",
+    "xml2json": "^0.12.0",
     "yahoo-fantasy": "^5.1.0"
   }
 }
